[tool.poetry]
name = "mma"
version = "0.1.0"
description = ""
authors = ["AnneLouise <71494611+AnneLouisedb@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.35.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
