[tool.poetry]
name = "mma"
version = "0.1.0"
description = ""
authors = ["AnneLouise <71494611+AnneLouisedb@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "1.2.0"
numpy = "^1.26.4"
jupyterlab-dagitty = "^0.3.5"
pycid = "^0.8.2"
altair = "4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
